[project]
name = "code-test-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Lowe"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "langgraph (>=0.6.2,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
pre-commit = "^4.2.0"

